Fix focus jumper not detecting changes

--- a/src/app/components/account-details/account-details.component.scss
+++ b/src/app/components/account-details/account-details.component.scss
@@ -156,6 +156,10 @@
   }
 }
 
+.sign-in-button-google-container {
+  display: grid;
+}
+
 .button-loader {
   mat-progress-bar {
     position: absolute;
